# graphify-okf-bridge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: Makefile  README.md  hero.tape  mcp.md
demo/fixtures/jaffle_shop_tables/: index.md
demo/fixtures/jaffle_shop_tables/tables/: customers.md  index.md  orders.md  stg_customers.md  stg_orders.md
docs/: proposal.md
spec/: MAPPING.md
src/graphify_okf_bridge/: __init__.py  cli.py  exporter.py  importer.py  linker.py
src/graphify_okf_bridge/graphify_io/: __init__.py  loader.py  schema.py
src/graphify_okf_bridge/okf/: __init__.py  model.py  reader.py  validator.py  writer.py
src/graphify_okf_bridge/skill/: SKILL.md
tests/fixtures/: tiny_graph.json
tests/fixtures/okf_minimal/: index.md
tests/fixtures/okf_minimal/datasets/: index.md  sales.md
tests/fixtures/okf_minimal/tables/: customers.md  index.md  orders.md
tests/fixtures/tiny_repo/analytics/: orders_model.sql  stg_orders.sql
tests/fixtures/tiny_repo/app/: models.py  service.py
tests/fixtures/tiny_repo/docs/: adr-0001.md
tests/integration/: test_graphify_compat.py
tests/roundtrip/: test_bundle_roundtrip.py  test_lossless.py
tests/unit/: test_cli_export.py  test_cli_import.py  test_cli_install_skill.py  test_cli_link.py  test_cli_validate.py  test_exporter.py  test_graphify_io_schema.py  test_importer.py  test_linker.py  test_official_bundles.py  test_okf_reader.py  test_okf_validator.py  test_okf_writer.py  test_scaffold.py  test_skill.py
