[project]
name = "graphify-okf-bridge"
version = "0.0.1"
description = "Bridge between Graphify code knowledge graphs and Google's Open Knowledge Format (OKF)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ashwath P C", email = "ashwath.pc07@gmail.com" }]
keywords = ["knowledge-graph", "okf", "graphify", "metadata", "data-catalog"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "python-frontmatter>=1.1",
]

[project.scripts]
okf-bridge = "graphify_okf_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/ashwathpc/graphify-okf-bridge"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphify_okf_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration' -q"
markers = [
  "integration: requires an installed graphifyy CLI (deselected by default)",
]

[tool.coverage.run]
source = ["src/graphify_okf_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["graphify_okf_bridge"]
mypy_path = "src"
